--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
                     </div>
 
                     <div class="col-sm-12 col-md-6 col-lg-4 bg-12 text-center p-5">
-                        <a href="./src/weblapok/" class="p-5" target="_blank">
+                        <a href="./src/weblapok/Szabo_Szabolcs_rakoczi_turos/home.html" class="p-5" target="_blank">
                             <h2>Szabó Szabolcs<br>kedvenc édessége:</h2>
-                            <h3>... ... ...</h3>
+                            <h3>Rákóczi Túrós</h3>
                             <img src="./src/kepek/external_link_white.png" alt="Külső hivatkozás"
                                 class="img-fluid external-link-icon m-5">
                         </a>
