--- a/index.html
+++ b/index.html
@@ -17,17 +17,15 @@
 </head>
 
 <body>
-    <nav>
-
-    </nav>
 
     <main>
-        <div class="mx-5">
-            <div class="container-fluid p-5">
 
-                <h1>BMSZC Neumann János Informatikai Technikum 11.a osztály kedvenc édességek projekt</h1>
+        <h1 class="p-5 text-center h1-bg">BMSZC Neumann János Informatikai Technikum<br>11.a osztály kedvenc édességek projekt</h1>
 
-                <div class="row align-items-center g-5">
+        <div class="m-5">
+            <div class="container-fluid">
+
+                <div class="row align-items-center">
 
                     <div class="col-sm-12 col-md-6 col-lg-4 bg-1 text-center p-5">
                         <a href="./src/weblapok/Balla_Adam_Csokiskekszszalami/index.html" class="p-5" target="_blank">
@@ -145,9 +143,11 @@
         </div>
     </main>
 
-    <footer>
-
+    <footer class="footer-bg text-center txt-small pb-2 pt-4">
+        <p class="pt-1">Kedvenc édességek weboldalak: 11.a</p>
+        <p class="py-1">Főoldalt készítette: Horogszegi Miklós, Balla Ádám</p>
     </footer>
+
 </body>
 
 </html>
