--- a/index.html
+++ b/index.html
@@ -20,127 +20,128 @@
 
     <main>
 
-        <h1 class="p-5 text-center h1-bg">BMSZC Neumann János Informatikai Technikum<br>11.a osztály kedvenc édességek projekt</h1>
+        <h1 class="p-5 text-center h1-bg">BMSZC Neumann János Informatikai Technikum<br>11.a osztály kedvenc édességek
+            projekt</h1>
 
-        <div class="m-5">
-            <div class="container-fluid">
 
-                <div class="row align-items-center">
+        <div class="container-fluid m-0">
 
-                    <div class="col-sm-12 col-md-6 col-lg-4 bg-1 text-center p-5">
-                        <a href="./src/weblapok/Balla_Adam_Csokiskekszszalami/index.html" class="p-5" target="_blank">
-                            <h2>Balla Ádám<br>kedvenc édessége:</h2>
-                            <h3>Csokis Keksz Szalámi</h3>
-                            <img src="./src/kepek/external_link_white.png" alt="Külső hivatkozás"
-                                class="img-fluid external-link-icon m-5">
-                        </a>
-                    </div>
+            <div class="row align-items-center">
 
-                    <div class="col-sm-12 col-md-6 col-lg-4 bg-2 text-center p-5">
-                        <a href="./src/weblapok/Bárdos_Simon_Sajttorta/index.html" class="p-5" target="_blank">
-                            <h2>Bárdos Simon<br>kedvenc édessége:</h2>
-                            <h3>Sajttorta</h3>
-                            <img src="./src/kepek/external_link_white.png" alt="Külső hivatkozás"
-                                class="img-fluid external-link-icon m-5">
-                        </a>
-                    </div>
-
-                    <div class="col-sm-12 col-md-6 col-lg-4 bg-3 text-center p-5">
-                        <a href="./src/weblapok/Farkas_Botond_MilkyWay/index.html" class="p-5" target="_blank">
-                            <h2>Farkas Botond<br>kedvenc édessége:</h2>
-                            <h3>Milky Way</h3>
-                            <img src="./src/kepek/external_link_white.png" alt="Külső hivatkozás"
-                                class="img-fluid external-link-icon m-5">
-                        </a>
-                    </div>
-
-                    <div class="col-sm-12 col-md-6 col-lg-4 bg-4 text-center p-5">
-                        <a href="./src/weblapok/Horogszegi_Miklos_Churros/index.html" class="p-5" target="_blank">
-                            <h2>Horogszegi Miklós<br>kedvenc édessége:</h2>
-                            <h3>Churros</h3>
-                            <img src="./src/kepek/external_link_white.png" alt="Külső hivatkozás"
-                                class="img-fluid external-link-icon m-5">
-                        </a>
-                    </div>
-
-                    <div class="col-sm-12 col-md-6 col-lg-4 bg-5 text-center p-5">
-                        <a href="./src/weblapok/Hrubos_Mark_Palacsinta/pages/landing.html" class="p-5" target="_blank">
-                            <h2>Hrubos Márk<br>kedvenc édessége:</h2>
-                            <h3>Palacsinta</h3>
-                            <img src="./src/kepek/external_link_white.png" alt="Külső hivatkozás"
-                                class="img-fluid external-link-icon m-5">
-                        </a>
-                    </div>
-
-                    <div class="col-sm-12 col-md-6 col-lg-4 bg-6 text-center p-5">
-                        <a href="./src/weblapok/Kiraly_Marton_Kremes/index.html" class="p-5" target="_blank">
-                            <h2>Király Márton<br>kedvenc édessége:</h2>
-                            <h3>Krémes</h3>
-                            <img src="./src/kepek/external_link_white.png" alt="Külső hivatkozás"
-                                class="img-fluid external-link-icon m-5">
-                        </a>
-                    </div>
-
-                    <div class="col-sm-12 col-md-6 col-lg-4 bg-7 text-center p-5">
-                        <a href="./src/weblapok/Kiss_Kamilla_aranygaluska/html/realfololdal.html" class="p-5"
-                            target="_blank">
-                            <h2>Kiss Kamilla<br>kedvenc édessége:</h2>
-                            <h3>Aranygaluska</h3>
-                            <img src="./src/kepek/external_link_white.png" alt="Külső hivatkozás"
-                                class="img-fluid external-link-icon m-5">
-                        </a>
-                    </div>
-
-                    <div class="col-sm-12 col-md-6 col-lg-4 bg-8 text-center p-5">
-                        <a href="./src/weblapok/Mikuska_Peter_Marcell_FeketerErdőTorta/index.html" class="p-5"
-                            target="_blank">
-                            <h2>Mikuska Péter Marcell<br>kedvenc édessége:</h2>
-                            <h3>Fekete Erdő Torta</h3>
-                            <img src="./src/kepek/external_link_white.png" alt="Külső hivatkozás"
-                                class="img-fluid external-link-icon m-5">
-                        </a>
-                    </div>
-
-                    <div class="col-sm-12 col-md-6 col-lg-4 bg-9 text-center p-5">
-                        <a href="./src/weblapok/Orban_Melinda_Twix/file/index.html" class="p-5" target="_blank">
-                            <h2>Orbán Melinda<br>kedvenc édessége:</h2>
-                            <h3>Twix</h3>
-                            <img src="./src/kepek/external_link_white.png" alt="Külső hivatkozás"
-                                class="img-fluid external-link-icon m-5">
-                        </a>
-                    </div>
-
-                    <div class="col-sm-12 col-md-6 col-lg-4 bg-10 text-center p-5">
-                        <a href="./src/weblapok/Ozvári-Lukács_Sándor_Áron_Dobostorta/index.html" class="p-5"
-                            target="_blank">
-                            <h2>Ozvári-Lukács Sándor Áron<br>kedvenc édessége:</h2>
-                            <h3>Dobostorta</h3>
-                            <img src="./src/kepek/external_link_white.png" alt="Külső hivatkozás"
-                                class="img-fluid external-link-icon m-5">
-                        </a>
-                    </div>
-
-                    <div class="col-sm-12 col-md-6 col-lg-4 bg-11 text-center p-5">
-                        <a href="./src/weblapok/Pongracz_Gabor_Brownie/index.html" class="p-5" target="_blank">
-                            <h2>Pongrácz Gábor<br>kedvenc édessége:</h2>
-                            <h3>Brownie</h3>
-                            <img src="./src/kepek/external_link_white.png" alt="Külső hivatkozás"
-                                class="img-fluid external-link-icon m-5">
-                        </a>
-                    </div>
-
-                    <div class="col-sm-12 col-md-6 col-lg-4 bg-12 text-center p-5">
-                        <a href="./src/weblapok/Szabo_Szabolcs_rakoczi_turos/home.html" class="p-5" target="_blank">
-                            <h2>Szabó Szabolcs<br>kedvenc édessége:</h2>
-                            <h3>Rákóczi Túrós</h3>
-                            <img src="./src/kepek/external_link_white.png" alt="Külső hivatkozás"
-                                class="img-fluid external-link-icon m-5">
-                        </a>
-                    </div>
-
+                <div class="col-sm-12 col-md-6 col-lg-4 bg-1 text-center p-5">
+                    <a href="./src/weblapok/Balla_Adam_Csokiskekszszalami/index.html" class="p-5" target="_blank">
+                        <h2>Balla Ádám<br>kedvenc édessége:</h2>
+                        <h3>Csokis Keksz Szalámi</h3>
+                        <img src="./src/kepek/external_link_white.png" alt="Külső hivatkozás"
+                            class="img-fluid external-link-icon m-5">
+                    </a>
                 </div>
+
+                <div class="col-sm-12 col-md-6 col-lg-4 bg-2 text-center p-5">
+                    <a href="./src/weblapok/Bárdos_Simon_Sajttorta/index.html" class="p-5" target="_blank">
+                        <h2>Bárdos Simon<br>kedvenc édessége:</h2>
+                        <h3>Sajttorta</h3>
+                        <img src="./src/kepek/external_link_white.png" alt="Külső hivatkozás"
+                            class="img-fluid external-link-icon m-5">
+                    </a>
+                </div>
+
+                <div class="col-sm-12 col-md-6 col-lg-4 bg-3 text-center p-5">
+                    <a href="./src/weblapok/Farkas_Botond_MilkyWay/index.html" class="p-5" target="_blank">
+                        <h2>Farkas Botond<br>kedvenc édessége:</h2>
+                        <h3>Milky Way</h3>
+                        <img src="./src/kepek/external_link_white.png" alt="Külső hivatkozás"
+                            class="img-fluid external-link-icon m-5">
+                    </a>
+                </div>
+
+                <div class="col-sm-12 col-md-6 col-lg-4 bg-4 text-center p-5">
+                    <a href="./src/weblapok/Horogszegi_Miklos_Churros/index.html" class="p-5" target="_blank">
+                        <h2>Horogszegi Miklós<br>kedvenc édessége:</h2>
+                        <h3>Churros</h3>
+                        <img src="./src/kepek/external_link_white.png" alt="Külső hivatkozás"
+                            class="img-fluid external-link-icon m-5">
+                    </a>
+                </div>
+
+                <div class="col-sm-12 col-md-6 col-lg-4 bg-5 text-center p-5">
+                    <a href="./src/weblapok/Hrubos_Mark_Palacsinta/pages/landing.html" class="p-5" target="_blank">
+                        <h2>Hrubos Márk<br>kedvenc édessége:</h2>
+                        <h3>Palacsinta</h3>
+                        <img src="./src/kepek/external_link_white.png" alt="Külső hivatkozás"
+                            class="img-fluid external-link-icon m-5">
+                    </a>
+                </div>
+
+                <div class="col-sm-12 col-md-6 col-lg-4 bg-6 text-center p-5">
+                    <a href="./src/weblapok/Kiraly_Marton_Kremes/index.html" class="p-5" target="_blank">
+                        <h2>Király Márton<br>kedvenc édessége:</h2>
+                        <h3>Krémes</h3>
+                        <img src="./src/kepek/external_link_white.png" alt="Külső hivatkozás"
+                            class="img-fluid external-link-icon m-5">
+                    </a>
+                </div>
+
+                <div class="col-sm-12 col-md-6 col-lg-4 bg-7 text-center p-5">
+                    <a href="./src/weblapok/Kiss_Kamilla_aranygaluska/html/realfololdal.html" class="p-5"
+                        target="_blank">
+                        <h2>Kiss Kamilla<br>kedvenc édessége:</h2>
+                        <h3>Aranygaluska</h3>
+                        <img src="./src/kepek/external_link_white.png" alt="Külső hivatkozás"
+                            class="img-fluid external-link-icon m-5">
+                    </a>
+                </div>
+
+                <div class="col-sm-12 col-md-6 col-lg-4 bg-8 text-center p-5">
+                    <a href="./src/weblapok/Mikuska_Peter_Marcell_FeketerErdőTorta/index.html" class="p-5"
+                        target="_blank">
+                        <h2>Mikuska Péter Marcell<br>kedvenc édessége:</h2>
+                        <h3>Fekete Erdő Torta</h3>
+                        <img src="./src/kepek/external_link_white.png" alt="Külső hivatkozás"
+                            class="img-fluid external-link-icon m-5">
+                    </a>
+                </div>
+
+                <div class="col-sm-12 col-md-6 col-lg-4 bg-9 text-center p-5">
+                    <a href="./src/weblapok/Orban_Melinda_Twix/file/index.html" class="p-5" target="_blank">
+                        <h2>Orbán Melinda<br>kedvenc édessége:</h2>
+                        <h3>Twix</h3>
+                        <img src="./src/kepek/external_link_white.png" alt="Külső hivatkozás"
+                            class="img-fluid external-link-icon m-5">
+                    </a>
+                </div>
+
+                <div class="col-sm-12 col-md-6 col-lg-4 bg-10 text-center p-5">
+                    <a href="./src/weblapok/Ozvári-Lukács_Sándor_Áron_Dobostorta/index.html" class="p-5"
+                        target="_blank">
+                        <h2>Ozvári-Lukács Sándor Áron<br>kedvenc édessége:</h2>
+                        <h3>Dobostorta</h3>
+                        <img src="./src/kepek/external_link_white.png" alt="Külső hivatkozás"
+                            class="img-fluid external-link-icon m-5">
+                    </a>
+                </div>
+
+                <div class="col-sm-12 col-md-6 col-lg-4 bg-11 text-center p-5">
+                    <a href="./src/weblapok/Pongracz_Gabor_Brownie/index.html" class="p-5" target="_blank">
+                        <h2>Pongrácz Gábor<br>kedvenc édessége:</h2>
+                        <h3>Brownie</h3>
+                        <img src="./src/kepek/external_link_white.png" alt="Külső hivatkozás"
+                            class="img-fluid external-link-icon m-5">
+                    </a>
+                </div>
+
+                <div class="col-sm-12 col-md-6 col-lg-4 bg-12 text-center p-5">
+                    <a href="./src/weblapok/Szabo_Szabolcs_rakoczi_turos/home.html" class="p-5" target="_blank">
+                        <h2>Szabó Szabolcs<br>kedvenc édessége:</h2>
+                        <h3>Rákóczi Túrós</h3>
+                        <img src="./src/kepek/external_link_white.png" alt="Külső hivatkozás"
+                            class="img-fluid external-link-icon m-5">
+                    </a>
+                </div>
+
             </div>
         </div>
+
     </main>
 
     <footer class="footer-bg text-center txt-small pb-2 pt-4">
