--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <main>
 
-        <h1 class="p-5 text-center h1-bg">BMSZC Neumann János Informatikai Technikum<br>11.a osztály kedvenc édességek
+        <h1 class="p-5 m-0 text-center h1-bg">BMSZC Neumann János Informatikai Technikum<br>11.a osztály kedvenc édességek
             projekt</h1>
 
 
