Nincsen érdemleges változás

--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
 <body>
 
     <main>
-
-        <h1 class="p-5 m-0 text-center h1-bg">BMSZC Neumann János Informatikai Technikum<br>11.a osztály kedvenc édességek
+        <h1 class="p-5 m-0 text-center h1-bg">BMSZC Neumann János Informatikai Technikum<br>11.a osztály kedvenc
+            édességek
             projekt</h1>
-
 
         <div class="container-fluid m-0">
 
@@ -138,10 +137,8 @@
                             class="img-fluid external-link-icon m-5">
                     </a>
                 </div>
-
             </div>
         </div>
-
     </main>
 
     <footer class="footer-bg text-center txt-small pb-2 pt-4">
