lokális weblap hivatkozásk kicserélése rendes linkekre

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="row align-items-center">
 
                 <div class="col-sm-12 col-md-6 col-lg-4 bg-1 text-center p-5">
-                    <a href="./src/weblapok/Balla_Adam_Csokiskekszszalami/index.html" class="p-5" target="_blank">
+                    <a href="http://csokiskekszszalami-ikt.000webhostapp.com/" class="p-5" target="_blank">
                         <h2>Balla Ádám<br>kedvenc édessége:</h2>
                         <h3>Csokis Keksz Szalámi</h3>
                         <img src="./src/kepek/external_link_white.png" alt="Külső hivatkozás"
@@ -37,7 +37,7 @@
                 </div>
 
                 <div class="col-sm-12 col-md-6 col-lg-4 bg-2 text-center p-5">
-                    <a href="./src/weblapok/Bárdos_Simon_Sajttorta/index.html" class="p-5" target="_blank">
+                    <a href="https://turquoise-deeann-40.tiiny.site/" class="p-5" target="_blank">
                         <h2>Bárdos Simon<br>kedvenc édessége:</h2>
                         <h3>Sajttorta</h3>
                         <img src="./src/kepek/external_link_white.png" alt="Külső hivatkozás"
@@ -46,7 +46,7 @@
                 </div>
 
                 <div class="col-sm-12 col-md-6 col-lg-4 bg-3 text-center p-5">
-                    <a href="./src/weblapok/Farkas_Botond_MilkyWay/index.html" class="p-5" target="_blank">
+                    <a href="https://farkasbotond.github.io/IKT_Kedvenc_Etel/" class="p-5" target="_blank">
                         <h2>Farkas Botond<br>kedvenc édessége:</h2>
                         <h3>Milky Way</h3>
                         <img src="./src/kepek/external_link_white.png" alt="Külső hivatkozás"
@@ -55,7 +55,7 @@
                 </div>
 
                 <div class="col-sm-12 col-md-6 col-lg-4 bg-4 text-center p-5">
-                    <a href="./src/weblapok/Horogszegi_Miklos_Churros/index.html" class="p-5" target="_blank">
+                    <a href="http://horogszegim.000webhostapp.com/" class="p-5" target="_blank">
                         <h2>Horogszegi Miklós<br>kedvenc édessége:</h2>
                         <h3>Churros</h3>
                         <img src="./src/kepek/external_link_white.png" alt="Külső hivatkozás"
@@ -64,7 +64,7 @@
                 </div>
 
                 <div class="col-sm-12 col-md-6 col-lg-4 bg-5 text-center p-5">
-                    <a href="./src/weblapok/Hrubos_Mark_Palacsinta/pages/landing.html" class="p-5" target="_blank">
+                    <a href="https://hrubosmark.github.io/IKT_Palacsinta/" class="p-5" target="_blank">
                         <h2>Hrubos Márk<br>kedvenc édessége:</h2>
                         <h3>Palacsinta</h3>
                         <img src="./src/kepek/external_link_white.png" alt="Külső hivatkozás"
@@ -73,7 +73,7 @@
                 </div>
 
                 <div class="col-sm-12 col-md-6 col-lg-4 bg-6 text-center p-5">
-                    <a href="./src/weblapok/Kiraly_Marton_Kremes/index.html" class="p-5" target="_blank">
+                    <a href="http://kiraly-marci-ikt.000webhostapp.com/" class="p-5" target="_blank">
                         <h2>Király Márton<br>kedvenc édessége:</h2>
                         <h3>Krémes</h3>
                         <img src="./src/kepek/external_link_white.png" alt="Külső hivatkozás"
@@ -82,7 +82,7 @@
                 </div>
 
                 <div class="col-sm-12 col-md-6 col-lg-4 bg-7 text-center p-5">
-                    <a href="./src/weblapok/Kiss_Kamilla_aranygaluska/html/realfololdal.html" class="p-5"
+                    <a href="http://aranygaluska.000webhostapp.com/" class="p-5"
                         target="_blank">
                         <h2>Kiss Kamilla<br>kedvenc édessége:</h2>
                         <h3>Aranygaluska</h3>
@@ -92,7 +92,7 @@
                 </div>
 
                 <div class="col-sm-12 col-md-6 col-lg-4 bg-8 text-center p-5">
-                    <a href="./src/weblapok/Mikuska_Peter_Marcell_FeketerErdőTorta/index.html" class="p-5"
+                    <a href="https://mikuskapetermarcell.github.io/IKT-Sutemeny/" class="p-5"
                         target="_blank">
                         <h2>Mikuska Péter Marcell<br>kedvenc édessége:</h2>
                         <h3>Fekete Erdő Torta</h3>
@@ -102,7 +102,7 @@
                 </div>
 
                 <div class="col-sm-12 col-md-6 col-lg-4 bg-9 text-center p-5">
-                    <a href="./src/weblapok/Orban_Melinda_Twix/file/index.html" class="p-5" target="_blank">
+                    <a href="https://twix-ikt.000webhostapp.com/index.html" class="p-5" target="_blank">
                         <h2>Orbán Melinda<br>kedvenc édessége:</h2>
                         <h3>Twix</h3>
                         <img src="./src/kepek/external_link_white.png" alt="Külső hivatkozás"
@@ -111,7 +111,7 @@
                 </div>
 
                 <div class="col-sm-12 col-md-6 col-lg-4 bg-10 text-center p-5">
-                    <a href="./src/weblapok/Ozvári-Lukács_Sándor_Áron_Dobostorta/index.html" class="p-5"
+                    <a href="https://ikt-sandor-dobostorta.000webhostapp.com/" class="p-5"
                         target="_blank">
                         <h2>Ozvári-Lukács Sándor Áron<br>kedvenc édessége:</h2>
                         <h3>Dobostorta</h3>
@@ -121,7 +121,7 @@
                 </div>
 
                 <div class="col-sm-12 col-md-6 col-lg-4 bg-11 text-center p-5">
-                    <a href="./src/weblapok/Pongracz_Gabor_Brownie/index.html" class="p-5" target="_blank">
+                    <a href="https://g4borr.github.io/11_1_ikt_projektmunka_PG/" class="p-5" target="_blank">
                         <h2>Pongrácz Gábor<br>kedvenc édessége:</h2>
                         <h3>Brownie</h3>
                         <img src="./src/kepek/external_link_white.png" alt="Külső hivatkozás"
@@ -130,7 +130,7 @@
                 </div>
 
                 <div class="col-sm-12 col-md-6 col-lg-4 bg-12 text-center p-5">
-                    <a href="./src/weblapok/Szabo_Szabolcs_rakoczi_turos/home.html" class="p-5" target="_blank">
+                    <a href="https://szaboszabi8.github.io/Kedvenc_desszert/" class="p-5" target="_blank">
                         <h2>Szabó Szabolcs<br>kedvenc édessége:</h2>
                         <h3>Rákóczi Túrós</h3>
                         <img src="./src/kepek/external_link_white.png" alt="Külső hivatkozás"
